--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -14,5 +14,6 @@ dependencies:
   meta: ^1.3.0
 
 dev_dependencies:
-  lints: ^2.0.0
-  test: ^1.21.0
+  lints: ^2.0.1
+  test: ^1.24.1
+  collection: ^1.17.1
