--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -10,6 +10,7 @@ environment:
   sdk: '>=2.19.0 <4.0.0'
 
 dependencies:
+  # http should be gone, just for testing providers easily
   http: ^0.13.0
   meta: ^1.3.0
 
