--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,10 +1,11 @@
-name: openfeature_dart
+name: openfeature
 description: This is the Dart implementation of OpenFeature, a vendor-agnostic abstraction library for evaluating feature flags.
 version: 0.0.1
 repository: https://github.com/open-feature
 homepage: https://openfeature.dev/
 issue_tracker: https://github.com/open-feature
 documentation: https://openfeature.dev/
+publish_to: none
 
 environment:
   sdk: '>=2.19.0 <4.0.0'
