--- a/.gitignore
+++ b/.gitignore
@@ -113,3 +113,7 @@ lib/generated_plugin_registrant.dart
 .ionide
 
 # End of https://www.toptal.com/developers/gitignore/api/dart,flutter,visualstudiocode
+
+# example
+main.aot
+out.js
