--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -18,7 +18,7 @@ jobs:
 
     steps:
       - uses: actions/checkout@v3
-      - uses: dart-lang/setup-dartv1
+      - uses: dart-lang/setup-dart@v1
 
       - name: Pub Get
         run: dart pub get
