--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,11 +1,10 @@
 name: openfeature
 description: This is the Dart implementation of OpenFeature, a vendor-agnostic abstraction library for evaluating feature flags.
-version: 0.0.1
-repository: https://github.com/open-feature
-homepage: https://openfeature.dev/
-issue_tracker: https://github.com/open-feature
-documentation: https://openfeature.dev/
-#publish_to: none
+version: 0.0.2
+repository: https://github.com/marandaneto/openfeature-dart-sdk
+homepage: https://openfeature.dev
+issue_tracker: https://github.com/marandaneto/openfeature-dart-sdk/issues
+documentation: https://pub.dev/documentation/openfeature/latest
 
 environment:
   sdk: '>=2.19.0 <4.0.0'
